--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600&family=Pacifico&family=Source+Sans+Pro:wght@400;600;700&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
-    <title>Shubhang Gupta - Portfolio</title>
+    <title>Shubhang Gupta</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
